se agrega seccion educscion

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#curriculum">Currículum</a></li>
+        <li class="nav-item"><a class="nav-link" href="seccion_educacion.html">Currículum</a></li>
         <li class="nav-item"><a class="nav-link" href="portafolio.html">Proyectos</a></li>
         <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
       </ul>
@@ -43,7 +43,7 @@
           la estructura clara y la mejora continua.
         </p>
         <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
-          <a href="#curriculum" class="btn btn-warning">Currículum</a>
+          <a href="seccion_educacion.html" class="btn btn-warning">Currículum</a>
           <a href="portafolio.html" class="btn btn-danger">Proyectos</a>
           <a href="#contacto" class="btn btn-primary">Contacto</a>
         </div>
