--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="seccion_educacion.html">Currículum</a></li>
         <li class="nav-item"><a class="nav-link" href="portafolio.html">Proyectos</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
       </ul>
     </div>
   </nav>
@@ -45,7 +45,7 @@
         <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
           <a href="seccion_educacion.html" class="btn btn-warning">Currículum</a>
           <a href="portafolio.html" class="btn btn-danger">Proyectos</a>
-          <a href="#contacto" class="btn btn-primary">Contacto</a>
+          <a href="contacto.html" class="btn btn-primary">Contacto</a>
         </div>
       </div>
     </div>
