carga de imagenes de proyectos

--- a/portafolio.html
+++ b/portafolio.html
@@ -51,15 +51,15 @@
         <tbody>
             <tr>
                 <td>Desafío 1: Curriculum Vitae en HTML</td>
-                <td><img src="/assets/img/cv.png" alt="Captura de pantalla del Desafío 1: Curriculum Vitae" width="300"></td>
+                <td><img src="./assets/img/cv.png" alt="Captura de pantalla del Desafío 1: Curriculum Vitae" width="300"></td>
             </tr>
             <tr>
                 <td>Desafío 2: Estilos y Layout con CSS</td>
-                <td>(En desarrollo)</td>
+                <td><img src="./assets/img/desafio_css.jpg" alt="Desafio Estilos y Layout con CSS" width="300"></td>
             </tr>
             <tr>
-                <td>Desafío 3: Interacciones con JavaScript</td>
-                <td>(En desarrollo)</td>
+                <td>Desafío 3: Alineando con Flex</td>
+                <td><img src="./assets/img/desafio_alineando_con_flex.png" alt="Alineando con Flex" width="300"></td>
             </tr>
         </tbody>
     </table>
